refer to GH Page version

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         },
         "islandora": {
             "type": "composer",
-            "url": "https://islandorapkg.shorock.com"
+            "url": "https://shorock.github.io/islandora_satis"
         }
     },
     "require": {
